# canvasapi

./: .gitlab-ci.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: canvas.rs  lib.rs  parameters.rs  requests.rs
src/models/: assignment.rs  canvas.rs  course.rs  file.rs  mod.rs  outcome.rs  quiz.rs  submission.rs  todo.rs  user.rs
tests/: get_todo.rs  get_users_from_course.rs
