[package]
name = "canvasapi"
version = "0.1.0"
authors = ["Thibaut Vandervelden <thvdveld@vub.be>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/thvdveld/canvasapi"
homepage = "https://gitlab.com/thvdveld/canvasapi"
documentation = "https://thvdveld.gitlab.io/canvasapi/canvasapi/"
keywords = ["rest", "api"]
description = "Canvas LMS REST API"
include = [
    "**/*.rs",
    "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
