[package]
name = "canvasapi"
version = "0.2.1"
authors = ["Thibaut Vandervelden <thvdveld@vub.be>"]
edition = "2018"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/thvdveld/canvasapi"
homepage = "https://gitlab.com/thvdveld/canvasapi"
documentation = "https://thvdveld.gitlab.io/canvasapi/canvasapi/"
keywords = ["rest", "api", "lms"]
description = "Canvas LMS REST API"
readme = "README.md"
include = [
    "**/*.md",
    "**/*.rs",
    "Cargo.toml",
]

[features]
default = [
    "tokio/full",
    "reqwest/json",
]

blocking = ["reqwest/blocking"]

devel = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.9", features = ["json"] }
tokio = { version = "1.15.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"
