[package]
name = "canvasapi"
version = "0.4.2"
authors = ["Thibaut Vandervelden <thvdveld@vub.be>"]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/thvdveld/canvasapi"
homepage = "https://gitlab.com/thvdveld/canvasapi"
documentation = "https://thvdveld.gitlab.io/canvasapi/canvasapi/"
keywords = ["rest", "api", "lms"]
description = "Canvas LMS REST API"
readme = "README.md"
include = [
    "**/*.md",
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]
reqwest = { version = "0.11.9", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15"
anyhow = "1.0"

tokio = { version = "1.15.0", optional = true }
clap = { version = "4.0.29", features = ["derive"] }

[dev-dependencies]
tokio-test = "0.4.2"

[features]
default = [
    "non_blocking"
]

blocking = ["reqwest/blocking", "reqwest/json"]
non_blocking = ["tokio/full", "reqwest/json"]

devel = []

[[bin]]
name = "canvas"
required-features = ["non_blocking"]
